--- a/registration-app/public/css/input.css
+++ b/registration-app/public/css/input.css
@@ -187,3 +187,40 @@
     align-items: center;
     margin-top: 10px;
 }
+
+.notifications-container {
+    width: 320px;
+    height: auto;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0;
+}
+
+.error-alert {
+    border-radius: 0.375rem;
+    padding: 1rem;
+    background-color: rgb(254 242 242);
+}
+
+.error-svg {
+    color: #F87171;
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.error-prompt-heading {
+    color: #991B1B;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: bold;
+}
