Add course registered

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1427,5 +1427,18 @@ canvas {
     overflow-x: auto;
 }
 
+.dashboard-container {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  
+  .recommend-course-container {
+    
+  }
+  
+  .course-registered-container {
+    
+  }
+  
   
 
