adjust course style

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -238,14 +238,18 @@
 }
 
 .sticky-top {
-    position: -webkit-sticky; /* For Safari */
+    position: -webkit-sticky;
+    /* For Safari */
     position: sticky;
     transition: .5s;
     top: 0;
-    z-index: 1000; /* Adjust z-index as needed */
-    background-color: #ffffff; /* Background color of the header */
-    border-bottom: 1px solid #e9ecef; /* Optional: Add a border at the bottom */
-  }
+    z-index: 1000;
+    /* Adjust z-index as needed */
+    background-color: #ffffff;
+    /* Background color of the header */
+    border-bottom: 1px solid #e9ecef;
+    /* Optional: Add a border at the bottom */
+}
 
 .navbar .navbar-brand {
     position: absolute;
@@ -865,7 +869,15 @@
 }
 
 .courses-area .properties__caption {
-    padding: 29px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
+}
+
+.properties__caption a {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Limit to 2 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .properties__footer {
@@ -918,10 +930,18 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 300px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.properties__card:hover {
+    transform: scale(1.02);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .properties__caption {
-    padding: 29px 20px 20px 20px;
+    padding: 0px 10px 10px 10px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -935,12 +955,7 @@
     white-space: nowrap;
 }
 
-@media (max-width: 767px) {
-    .properties__card {
-        height: 540px !important;
-        /* Set the height to 500px for screens less than 768px wide */
-    }
-}
+
 
 .properties__caption h3 {
     max-height: 2.8em;
@@ -992,7 +1007,7 @@ body {
     /* เพิ่ม flexbox */
     flex-direction: column;
     /* จัดเรียงเนื้อหาในแนวตั้ง */
-    
+
 }
 
 .detailcard-img-top {
@@ -1447,4 +1462,64 @@ img.logo-wu {
     overflow-x: auto;
 }
 
+/* Styles for the bookmark button */
+.bookmark-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 1;
+    width: 40px;
+    height: 40px;
+    font-size: 2rem;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+}
 
+.bookmark-button:hover {
+    color: #fbff89;
+}
+
+/* Active state for the bookmark button */
+.bookmark-button.active {
+    color: #fff700;
+}
+
+.card-btn {
+    bottom: 0;
+}
+
+.card-btn:hover {
+    background-color: #d6d6d6;
+}
+
+@media (max-width: 1400px) {
+    .col-lg-3 {
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
+    }
+}
+
+@media (max-width: 992px) {
+    .col-lg-3 {
+        flex: 0 0 50%;
+        /* Two columns on medium screens */
+        max-width: 50%;
+    }
+}
+
+@media (max-width: 768px) {
+    .col-lg-3 {
+        flex: 0 0 100%;
+        /* One column on small screens */
+        max-width: 100%;
+    }
+}
+
+.center-div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
