added: handle error

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -929,7 +929,7 @@
 .properties__card {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: auto;
     width: 300px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: relative;
