--- a/registration-app/public/css/input.css
+++ b/registration-app/public/css/input.css
@@ -233,6 +233,7 @@
     font-weight: 600;
     border-radius: 4px;
     z-index: 1;
+    padding-right: 5px;
 }
 
 .download-button .excel {
@@ -247,10 +248,6 @@
     background-color: #E60073;
     border: solid 1px #e8e8e82d;
     transition: all .5s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.download-button:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .download {
