--- a/registration-app/public/css/profile.css
+++ b/registration-app/public/css/profile.css
@@ -27,8 +27,26 @@
 }
 
 .history{
-    padding: 0px 20px 10px;
+    
 }
+.history table {
+    width: 100%;
+  }
+  
+  .history th,
+  .history td {
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+  }
+  
+  .history th {
+    font-weight: bold;
+    background-color: #f0f0f0;
+  }
+  
+  .history tr:last-child td {
+    border-bottom: none;
+  }
 
 .custom-rounded-bottom {
     border-bottom-left-radius: 0.375rem !important;
