--- a/registration-app/public/css/profile.css
+++ b/registration-app/public/css/profile.css
@@ -1,6 +1,5 @@
 .custom-body {
     padding-top: 20px;
-    background-color: #f1f5f9;
 }
 
 /* Cards */
@@ -25,18 +24,43 @@
     box-shadow: 1px 2px 4px rgba(0, 0, 20, 0.08), 1px 1px 2px rgba(0, 0, 20, 0.08);
     width: 100%;
 }
+.image-container {
+    position: relative;
+    width: 100%; /* กำหนดให้รูปภาพเต็มขนาดของพื้นที่ */
+    object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ */
+  }
+  
+  .number-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    width: 20px; /* เพิ่มความกว้างของ Element */
+    height: 20px; /* เพิ่มความสูงของ Element */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #e90073;
+    border-radius: 10%;
+}
 .skill-group {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 10px;
+    gap: 15px;
   }
 .skill {
+    position: relative;
     width: calc(33.33% - 10px); /* คำนวณขนาดของแต่ละส่วนให้แสดง 3 ข้อมูลต่อแถว */
     text-align: center;
   }
 .skill p {
     margin-top: 10px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .skill img {
     width: 100px;
