update: profile page to show skill count

--- a/registration-app/public/css/profile.css
+++ b/registration-app/public/css/profile.css
@@ -24,13 +24,16 @@
     box-shadow: 1px 2px 4px rgba(0, 0, 20, 0.08), 1px 1px 2px rgba(0, 0, 20, 0.08);
     width: 100%;
 }
+
 .image-container {
     position: relative;
-    width: 100%; /* กำหนดให้รูปภาพเต็มขนาดของพื้นที่ */
-    object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ */
-  }
-  
-  .number-overlay {
+    width: 100%;
+    /* กำหนดให้รูปภาพเต็มขนาดของพื้นที่ */
+    object-fit: cover;
+    /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ */
+}
+
+.number-overlay {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -39,8 +42,10 @@
     font-size: 12px;
     font-weight: bold;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    width: 20px; /* เพิ่มความกว้างของ Element */
-    height: 20px; /* เพิ่มความสูงของ Element */
+    width: 20px;
+    /* เพิ่มความกว้างของ Element */
+    height: 20px;
+    /* เพิ่มความสูงของ Element */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,21 +54,26 @@
     background-color: #e90073;
     color: white;
 }
+
 .skill-group {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-  }
+}
+
 .skill {
     position: relative;
-    width: calc(33.33% - 10px); /* คำนวณขนาดของแต่ละส่วนให้แสดง 3 ข้อมูลต่อแถว */
+    width: calc(33.33% - 10px);
+    /* คำนวณขนาดของแต่ละส่วนให้แสดง 3 ข้อมูลต่อแถว */
     text-align: center;
-  }
+}
+
 .skill p {
     margin-top: 10px;
     text-overflow: ellipsis;
     overflow: hidden;
 }
+
 .skill img {
     width: 100px;
     height: 100px;
@@ -75,30 +85,31 @@
     border: 1px solid #e0e0e0;
     transition: box-shadow 0.3s ease-in-out;
 }
+
 .skill img:hover {
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); /* เพิ่มเงาเมื่อเมาส์วางบนรูปภาพ */
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    /* เพิ่มเงาเมื่อเมาส์วางบนรูปภาพ */
 }
 
-.history{
-    
-}
+.history {}
+
 .history table {
     width: 100%;
-  }
-  
-  .history th,
-  .history td {
+}
+
+.history th,
+.history td {
     border-bottom: 1px solid #ccc;
     padding: 10px;
-  }
-  
-  .history th {
+}
+
+.history th {
     font-weight: bold;
-  }
-  
-  .history tr:last-child td {
+}
+
+.history tr:last-child td {
     border-bottom: none;
-  }
+}
 
 .custom-rounded-bottom {
     border-bottom-left-radius: 0.375rem !important;
@@ -110,15 +121,19 @@
     height: 10rem;
     width: 10rem;
     position: relative;
-    transition: filter 0.3s; /* Add a transition for a smooth effect */
-    border-radius: 50%; /* Make the avatar a circle by default */
+    transition: filter 0.3s;
+    /* Add a transition for a smooth effect */
+    border-radius: 50%;
+    /* Make the avatar a circle by default */
 }
 
 @media (max-width: 768px) {
     .custom-avatar-xxl {
         height: 6rem;
-        width: 10rem; /* Maintain width for ovals */
-        border-radius: 50%; /* Keep the avatar round on smaller screens */
+        width: 10rem;
+        /* Maintain width for ovals */
+        border-radius: 50%;
+        /* Keep the avatar round on smaller screens */
     }
 }
 
@@ -164,51 +179,51 @@
 
 /* Other Styles */
 .custom-pt-20 {
-    padding-top: 8rem!important;
+    padding-top: 8rem !important;
     background: linear-gradient(rgba(188, 115, 176, 0.7), rgba(188, 115, 176, 0.7)), url(../img/hero_bg.jpg) center center no-repeat;
     background-size: cover;
     height: 250px;
 }
 
 .custom-px-4 {
-    padding-left: 1rem!important;
-    padding-right: 1rem!important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
 }
 
 .custom-mt-n10 {
-    margin-top: -3rem!important;
+    margin-top: -3rem !important;
 }
 
 .custom-me-2 {
-    margin-right: 0.5rem!important;
+    margin-right: 0.5rem !important;
 }
 
 .custom-align-items-end {
-    align-items: flex-end!important;
+    align-items: flex-end !important;
 }
 
 .custom-bg-gray-300 {
     --dashui-bg-opacity: 1;
-    background-color: #cbd5e1!important;
+    background-color: #cbd5e1 !important;
 }
 
 .custom-mb-6 {
-    margin-bottom: 1.5rem!important;
+    margin-bottom: 1.5rem !important;
 }
 
 .custom-mb-4 {
-    margin-bottom: 1rem!important;
+    margin-bottom: 1rem !important;
 }
 
 .custom-mb-8 {
-    margin-bottom: 2rem!important;
+    margin-bottom: 2rem !important;
 }
 
 .custom-ms-4 {
-    margin-left: 1rem!important;
+    margin-left: 1rem !important;
 }
 
-.bi-custom{
+.bi-custom {
     color: #E60073;
     padding-right: 20px;
     padding-left: 20px;
@@ -216,6 +231,18 @@
 
 @media (max-width: 768px) {
     .custom-skill-card {
-      margin-top: 20px; /* เพิ่มระยะห่างด้านบนเมื่อหน้าจอย่อลงไป */
+        margin-top: 20px;
+        /* เพิ่มระยะห่างด้านบนเมื่อหน้าจอย่อลงไป */
     }
+}
+
+td, th {
+    text-align: start;
+}
+
+.course-name {
+    white-space: nowrap; /* Prevent line breaks */
+    overflow: hidden; /* Hide overflowing content */
+    text-overflow: ellipsis; /* Display an ellipsis (...) to indicate text overflow */
   }
+  
